--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="152dp"
         android:layout_marginTop="64dp"
         android:text="TextView"
-        android:textColor="@color/colorAccent1"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +49,7 @@
         android:layout_marginStart="244dp"
         android:layout_marginTop="64dp"
         android:text="TextView"
-        android:textColor="@color/colorAccent1"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
