listview y botonera + alert dialog con modificacion de xml redy 2 go

--- a/app/src/main/res/layout/alert_di_recy.xml
+++ b/app/src/main/res/layout/alert_di_recy.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="500dp"
-    android:background="@color/colorAccent2">
+    android:background="@color/colorBlack">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,13 +22,16 @@
 
         <TextView
             android:id="@+id/tv_titulo"
-            android:layout_width="142dp"
-            android:layout_height="36dp"
+            android:layout_width="350dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:text="TextView"
             android:textColor="@color/colorAccent1"
             android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,11 +65,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="140dp"
+            android:layout_marginBottom="8dp"
             android:background="@color/colorAccent2"
             android:text="Fecha"
             android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/tv_fecha"
@@ -74,11 +80,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="84dp"
             android:layout_marginTop="136dp"
+            android:layout_marginBottom="8dp"
             android:text="TextView"
             android:textColor="@color/colorAccent1"
             android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
