--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,6 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-3dp"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_navigation"/>
+        android:background="@color/colorPrimary"
+        app:menu="@menu/bottom_navigation" />
 </RelativeLayout>
