--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -25,8 +25,10 @@
             android:layout_height="48dp"
             android:layout_marginStart="4dp"
             android:ems="10"
+            android:hint="Usuario"
             android:inputType="textPersonName"
-            android:text="Name"
+            android:textColor="@color/colorAccent1"
+            android:textColorHint="@color/colorAccent1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
