--- a/app/src/main/res/layout/alert_di_recy_user.xml
+++ b/app/src/main/res/layout/alert_di_recy_user.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_autor"
+            android:id="@+id/tv_titulo"
             android:layout_width="350dp"
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
@@ -44,7 +44,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_autor" />
+            app:layout_constraintTop_toTopOf="@+id/tv_titulo" />
 
     </android.support.constraint.ConstraintLayout>
 
