--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -47,7 +47,7 @@
             app:layout_constraintVertical_bias="0.822" />
 
         <TextView
-            android:id="@+id/tv_autor"
+            android:id="@+id/tv_titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
