--- a/app/src/main/res/layout/activity_show_map.xml
+++ b/app/src/main/res/layout/activity_show_map.xml
@@ -6,4 +6,16 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowMapActivity" />
+    tools:context=".ShowMapActivity" >
+
+    <Button
+        android:id="@+id/btn_autolpay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="20dp"
+        android:padding="10dp"
+        android:paddingRight="10dp"
+        android:text="Demo Button" />
+
+</fragment>
