--- a/app/src/main/res/anim/zoom.xml
+++ b/app/src/main/res/anim/zoom.xml
@@ -9,6 +9,16 @@
         android:toXScale="1.5"
         android:toYScale="1.5"/>
 
+    <rotate xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="50"
+        android:fromDegrees="-5"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:repeatCount="infinite"
+        android:repeatMode="reverse"
+        android:toDegrees="5" />
+
+
     <scale android:duration="500"
         android:fromXScale="1.5"
         android:fromYScale="1.5"
@@ -17,4 +27,5 @@
         android:toXScale="0"
         android:toYScale="0"
         android:startOffset="1000"/>
+
 </set>
