--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,18 +9,26 @@
 
     <ImageView
         android:id="@+id/jaguar"
-        android:layout_width="172dp"
-        android:layout_height="191dp"
+        android:layout_width="239dp"
+        android:layout_height="332dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="268dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.026"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="196dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/jaguar" />
+
+    <ImageView
+        android:id="@+id/rugido_id"
+        android:layout_width="294dp"
+        android:layout_height="242dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="320dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rugido1" />
+
 </android.support.constraint.ConstraintLayout>
