--- a/app/src/main/res/layout/alert_di_recy.xml
+++ b/app/src/main/res/layout/alert_di_recy.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="@color/colorAccent2"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -41,9 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="88dp"
-            android:background="@color/colorAccent2"
+            android:background="#0000A4D3"
             android:text="Autor"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,7 +54,7 @@
             android:layout_marginStart="84dp"
             android:layout_marginTop="84dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -66,9 +66,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="140dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/colorAccent2"
+            android:background="#00532F2F"
             android:text="Fecha"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -82,7 +82,7 @@
             android:layout_marginTop="136dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
