recycler view de usuarios con todos los usuarios y con los puntos que ha creado cada uno

--- a/app/src/main/res/layout/rv_vista_user.xml
+++ b/app/src/main/res/layout/rv_vista_user.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/colorAccent1">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/const_lay_user"
-        android:layout_width="399dp"
-        android:layout_height="87dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/colorBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="417dp"
+        android:layout_height="74dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="-2dp">
 
         <TextView
             android:id="@+id/tv_titulo"
@@ -34,7 +32,7 @@
             android:layout_width="63dp"
             android:layout_height="31dp"
             android:layout_marginEnd="36dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textColor="@color/colorPrimaryLight"
             app:layout_constraintBottom_toBottomOf="parent"
