--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".BuscarFragment" >
+    tools:context=".BuscarFragment">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="281dp"
         android:layout_height="52dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="88dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -36,28 +36,37 @@
             android:id="@+id/btn_buscar"
             android:layout_width="69dp"
             android:layout_height="51dp"
+            android:background="@color/colorPrimary"
             android:src="@android:drawable/ic_menu_search"
+            android:tint="@color/colorAccent1"
             app:layout_constraintStart_toEndOf="@+id/et_usuario"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btn_usuario"
-        android:layout_width="118dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="308dp"
-        android:layout_marginEnd="144dp"
-        android:text="Usuario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_usuarios"
-        android:layout_width="395dp"
-        android:layout_height="360dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="411dp"
+        android:layout_height="441dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_usuario" />
+        app:layout_constraintTop_toBottomOf="@+id/t" />
+
+    <TextView
+        android:id="@+id/t"
+        android:layout_width="271dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:text="¡Estos son otros usuarios que te pueden interesar!"
+        android:textColor="@color/colorAccent2"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.015"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
