--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="50"
+    android:duration="100"
     android:fromDegrees="-5"
     android:pivotX="50%"
     android:pivotY="50%"
+    android:startOffset="500"
     android:repeatCount="infinite"
     android:repeatMode="reverse"
     android:toDegrees="5" />
