--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,28 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+    <!-- Base application theme light. -->
+    <style name="AppThemes" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here Light. -->
+        <item name="colorPrimaryDark">@color/colorPrimaryLight</item>
+        <item name="colorAccent">@color/colorAccent1</item>
+        <item name="backgroundcolor">@color/backgroundcolor</item>
+        <item name="tintcolor">@color/tintcolor</item>
+        <item name="buttoncolor">@color/buttoncolor</item>
+        <item name="textColor">@color/texcolor</item>
+    </style>
+
+    <style name="darkTtheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here Light. -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent1</item>
+        <item name="backgroundcolor">@color/backgroundcolorDark</item>
+        <item name="tintcolor">@color/tintcolorDark</item>
+        <item name="buttoncolor">@color/buttoncolor</item>
+        <item name="textColor">@color/texcolorDark</item>
     </style>
 
 
 
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
