--- a/app/src/main/res/drawable/shapeemail.xml
+++ b/app/src/main/res/drawable/shapeemail.xml
@@ -13,7 +13,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/icons">
+        android:color="@color/texcolor">
     </stroke>
 
     <padding
