--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_registro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="?attr/backgroundcolor"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp">
@@ -96,7 +96,7 @@
         android:padding="15dp"
         android:shadowColor="@android:color/transparent"
         android:text="Sign Up"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="?attr/textColor" />
 
 
 </LinearLayout>
