--- a/app/src/main/res/layout/alert_di_recy.xml
+++ b/app/src/main/res/layout/alert_di_recy.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="500dp"
-    android:background="@color/colorBlack">
+    android:background="?attr/backgroundcolor">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/colorlv"
+        android:background="?attr/backgroundcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent2"
+            android:textColor="?attr/textColor"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -43,7 +43,7 @@
             android:layout_marginTop="88dp"
             android:background="#0000A4D3"
             android:text="Autor"
-            android:textColor="@color/colorAccent1"
+            android:textColor="?attr/textColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,7 +54,7 @@
             android:layout_marginStart="84dp"
             android:layout_marginTop="84dp"
             android:text="TextView"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/textColor"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -68,7 +68,7 @@
             android:layout_marginBottom="8dp"
             android:background="#00532F2F"
             android:text="Fecha"
-            android:textColor="@color/colorAccent1"
+            android:textColor="?attr/textColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -82,7 +82,7 @@
             android:layout_marginTop="136dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/textColor"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
