--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#252222</color>
+    <color name="colorAccent1">#9C29B7</color>
+    <color name="colorAccent2">#00A4D3</color>
+    <!--Light-->
     <color name="colorPrimaryLight">#FFFFFF</color>
-    <color name="colorAccent1">#9c29b7</color>
-    <color name="colorAccent2">#00a4d3</color>
-    <color name="colorBlack">#3F3D3D</color>
-    <color name="colorlv">#212121</color>
+    <color name="backgroundcolor">#FFFFFF</color>
+    <color name="tintcolor">#000000</color>
+    <color name="buttoncolor">#00a4d3</color>
+    <color name="texcolor">#4B4B4B</color>
+    <color name="bordercolor">#000000</color>
+    <color name="icons">#000000</color>
+
+
+
+    <!--Dark-->
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="backgroundcolorDark">#2B2B2B</color>
+    <color name="tintcolorDark">#ffffff</color>
+    <color name="buttoncolorDark">#00a4d3</color>
+    <color name="texcolorDark">#ffffff</color>
+    <color name="iconsDark">#ffffff</color>
+    <color name="bordercolorDark">#ffffff</color>
+
+
 
     <color name="icons">#FFFFFF</color>
 </resources>
