--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="buttoncolor">#00a4d3</color>
     <color name="texcolor">#4B4B4B</color>
     <color name="bordercolor">#000000</color>
-    <color name="icons">#000000</color>
+    <color name="iconss">#000000</color>
 
 
 
