--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraint_lay"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@color/colorBlack">
+    android:background="@color/cardview_shadow_start_color">
 
 
 
