Colores y ajustes diseño

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -17,5 +17,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-3dp"
         android:background="?attr/backgroundcolor"
+        app:itemIconTint="?attr/textColor"
+        app:itemTextColor="?attr/textColor"
         app:menu="@menu/bottom_navigation" />
 </RelativeLayout>
