--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ds">
+        <attr name="colorPrimary" format="color"/>
         <attr name="backgroundcolor" format="color"/>
         <attr name="textColor" format="color"/>
         <attr name="tintcolor" format="color"/>
