--- a/app/src/main/res/layout/rv_vista_add.xml
+++ b/app/src/main/res/layout/rv_vista_add.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraint_lay"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@color/cardview_shadow_start_color">
+    android:background="?attr/backgroundcolor">
 
 
 
@@ -17,7 +17,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/textColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,7 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/textColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="?attr/textColor"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
