--- a/app/src/main/res/layout/alert_di_recy_user.xml
+++ b/app/src/main/res/layout/alert_di_recy_user.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="?attr/textColor"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
