--- a/app/src/main/res/layout/rv_vista_user.xml
+++ b/app/src/main/res/layout/rv_vista_user.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent1">
+    android:background="?attr/backgroundcolor">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/const_lay_user"
         android:layout_width="417dp"
         android:layout_height="74dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="?attr/backgroundcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="-2dp">
 
@@ -22,7 +21,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:text="TextView"
-            android:textColor="@color/colorAccent1"
+            android:textColor="?attr/backgroundcolor"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
