--- a/app/src/main/res/layout/rv_vista_user.xml
+++ b/app/src/main/res/layout/rv_vista_user.xml
@@ -16,12 +16,12 @@
 
         <TextView
             android:id="@+id/tv_titulo"
-            android:layout_width="109dp"
+            android:layout_width="180dp"
             android:layout_height="37dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:text="TextView"
-            android:textColor="?attr/backgroundcolor"
+            android:textColor="?attr/textColor"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,8 +32,8 @@
             android:layout_height="31dp"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="16dp"
-            android:text="TextView"
-            android:textColor="@color/colorPrimaryLight"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </android.support.constraint.ConstraintLayout>
