--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -13,6 +13,7 @@
     <ImageView
         android:layout_width="156dp"
         android:layout_height="150dp"
+        android:layout_marginBottom="40dp"
         android:src="@drawable/jaguar" />
 
     <EditText
